# PCP-software

./: .gitignore  APP.py  README.md  collect.sh  collect_calib.sh  modify_calib_name.py  modify_name.py  mono_calib.py  regis_byhand.py  stereo_calib.py  supplement.md  test.py
app/: APP.py  main_subwindow.py  main_window.py  mono_calib.py  stereo_calib.py  test.py  utils.py
launch_copy/: collect_calib.launch  collect_data.launch  publish_data.launch
src/calib_data/: CMakeLists.txt  package.xml
src/calib_data/launch/: calib.launch
src/calib_data/src/: calib.cpp
src/collect_data/: CMakeLists.txt  package.xml
src/collect_data/launch/: collect_calib.launch  collect_data.launch  publish_data.launch  publish_raw_data.launch  publish_robot_cam_imgview.launch
src/collect_data/src/: ir_rgb_remap.cpp  ir_rgb_snapshot.cpp  ir_snapshot.cpp  remap_test.cpp  rgb_snapshot.cpp
src/common_utils/: common.h  io_utils.cpp  io_utils.h
src/common_utils/config/: param1.yaml  param2.yaml
src/review_data/: CMakeLists.txt  package.xml
src/review_data/include/: utils.h
src/review_data/launch/: review_color_lidar.launch
src/review_data/src/: review_color_lidar_node.cpp  stereo_par.py  utils.cpp
src/review_data/src/calib_src/config/: IR_chessboard.xml  mono_imgs.xml  mono_ir_imgs.xml  mono_ir_setting.xml  mono_setting.xml  param3.yaml  stereo_imgs.xml  stereo_setting.xml
src/review_data/src/calib_src/include/: circle_board.h
src/review_data/src/calib_src/src/: blob_detector.cpp  circle_board.cpp  stereo_calib.cpp
